FIX : Refactoring & Fix with %20